Added notes for installing jekyll.

--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,9 @@ whitelist:
 exclude:
   - Gemfile
   - Gemfile.lock
-  - LICENSE
   - README.md
   - CNAME
+  - notes.txt
 
 theme: jekyll-theme-midnight
 
