--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,7 @@ gems:
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-gist
   - jekyll-paginate
+  - jekyll-sitemap
 
 whitelist:
   - jekyll-paginate
