Modified about me.

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ avatar: https://indrabasak.github.io/images/brick.png
 # About/contact
 author:
   name: Indra Basak
+  email: "indra.basak1@gmail.com"
 
 timezone: America/Los Angeles
 
