Added 'Revisiting Swagger' post and changes to 'About Me'.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ simple_search: https://www.google.com/search
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: indra.basak1@gmail.com
   facebook:
   flickr:
   github: indrabasak
