--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ footer-links:
 disqus: indrabasak-github-io
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-99131839-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
