--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ footer-links:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: pdxindra
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  stackoverflow: users/8012379/indra-basak
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
