--- a/_config.yml
+++ b/_config.yml
@@ -114,3 +114,15 @@ assets:
     - _assets/fonts
 
 allowsearch: true
+
+# Slides
+defaults:
+  -
+    scope:
+      path: "_slides" #__
+    values:
+      layout: "iframe"
+
+collections:
+  slides:
+    output: true
