made banthrico into a separate collection

--- a/_config.yml
+++ b/_config.yml
@@ -126,3 +126,7 @@ defaults:
 collections:
   slides:
     output: true
+  banthrico:
+    output: true
+    output_ext: .html
+    permalink: /banthrico/:path/
