--- a/_data/banthrico.yml
+++ b/_data/banthrico.yml
@@ -6,35 +6,56 @@ list:
         manufacturer: Bankers' Thrift Corporation, Chicago
         material: Metal
         year: 1922
-        image: banthrico/people/1922-teddy-roosevelt-bankers-thrift-01.jpeg
+        image: /images/banthrico/people/1922-teddy-roosevelt-bankers-thrift-01.jpeg
 
       - name: John F. Kennedy
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
         issuer: Merchants Co-operative Bank, Boston
-        image: banthrico/people/john-f-kennedy-01.jpeg
+        image: /images/banthrico/people/john-f-kennedy-01.jpeg
 
       - name: Dwight Eisenhower
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
         issuer: United Insurance Co., Chicago, IL
-        image: banthrico/people/eisenhower-01.jpeg
+        image: /images/banthrico/people/eisenhower-01.jpeg
 
       - name: Robert E. Lee
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
         issuer: The Lee County Bank, Fort Myers, FL
-        image: banthrico/people/robert-e-lee-01.jpeg
+        image: /images/banthrico/people/robert-e-lee-01.jpeg
 
       - name: Douglas MacArthur
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
         issuer: The Lee County Bank, Fort Myers, FL
-        image: banthrico/people/douglas-macarthur-01.jpeg
+        image: /images/banthrico/people/douglas-macarthur-01.jpeg
+
+      - name: Native American Man
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: The National Shawmut Bank, Boston, MA
+        image: /images/banthrico/people/douglas-macarthur-01.jpeg
+
+      - name: George Washinghton (2)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: 1 St Bank and Trust Company, Indianapolis, IN
+        image: /images/banthrico/people/george-washington-01.jpeg
+
+      - name: George Washinghton (1)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1947
+        issuer: State Bank & Trust, Evanston, IL
+        image: /images/banthrico/people/george-washington-1947-01.jpeg
 
   - category: Mascot
     items:
@@ -43,38 +64,38 @@ list:
         material: Metal
         year: 1960s
         issuer: Citizen Bank of Oregon, OR
-        image: banthrico/mascot/oregon-duck-01.jpeg
+        image: /images/banthrico/mascot/oregon-duck-01.jpeg
 
       - name: Oregon State University Beavers
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: Citizen Bank of Corvallis, OR
-        image: banthrico/mascot/oregon-state-beavers-01.jpeg
+        image: /images/banthrico/mascot/oregon-state-beavers-01.jpeg
 
       - name: Michigan State University Spartan
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: East Lansing State Bank, MI;  Ioter City Bank, MI
-        image: banthrico/mascot/mich-state-spartans-01.jpeg
+        image: /images/banthrico/mascot/mich-state-spartans-01.jpeg
 
       - name: University of Missouri Tigers
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 2021
         issuer: Kansas City Bank & Trust Co., MO
-        image: banthrico/mascot/missouri-tigers-01.jpeg
+        image: /images/banthrico/mascot/missouri-tigers-01.jpeg
 
       - name: Purdue University Boilermakers
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 2021
         issuer: Lafayette National Bank, IN
-        image: banthrico/mascot/purdue-boilermakers-01.jpeg
+        image: /images/banthrico/mascot/purdue-boilermakers-01.jpeg
 
       - name: University of Wisconsin Badgers
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 2021
-        image: banthrico/mascot/wisconsin-badgers-01.jpeg
+        image: /images/banthrico/mascot/wisconsin-badgers-01.jpeg
