--- a/_data/banthrico.yml
+++ b/_data/banthrico.yml
@@ -41,14 +41,21 @@ list:
         material: Metal
         year:
         issuer: The National Shawmut Bank, Boston, MA
-        image: /images/banthrico/people/douglas-macarthur-01.jpeg
+        image: /images/banthrico/people/native-american-man-01.jpeg
 
-      - name: George Washinghton (2)
+      - name: Native American Chief
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
-        issuer: 1 St Bank and Trust Company, Indianapolis, IN
-        image: /images/banthrico/people/george-washington-01.jpeg
+        issuer: The Multnomah Bank, Portland, OR
+        image: /images/banthrico/people/native-american-chief-01.jpeg
+
+      - name: Chief Anacostia
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Anacostia Federal Savings, Washington, DC
+        image: /images/banthrico/people/chief-anacostia-01.jpeg
 
       - name: George Washinghton (1)
         manufacturer: Banthrico, Chicago
@@ -57,9 +64,30 @@ list:
         issuer: State Bank & Trust, Evanston, IL
         image: /images/banthrico/people/george-washington-1947-01.jpeg
 
+      - name: George Washinghton (2)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: 1 St Bank and Trust Company, Indianapolis, IN
+        image: /images/banthrico/people/george-washington-01.jpeg
+
+      - name: Thomas A. Edison
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: The Lee County Bank, Fort Myers, FL
+        image: /images/banthrico/people/edison-01.jpeg
+
+      - name: Benjamin Franklin
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Franklin Bank, St Albans, VT
+        image: /images/banthrico/people/ben-frankin-01.jpeg
+
   - category: Mascot
     items:
-      - name: Univeristy of Oregon Duck
+      - name: University of Oregon Duck
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
@@ -72,6 +100,13 @@ list:
         year: 1960s
         issuer: Citizen Bank of Corvallis, OR
         image: /images/banthrico/mascot/oregon-state-beavers-01.jpeg
+
+      - name: University of Michigan Wolverines
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        issuer: Pontiac State Bank, MI
+        image: /images/banthrico/mascot/michigan-wolverines-01.jpeg
 
       - name: Michigan State University Spartan
         manufacturer: Banthrico, Chicago
@@ -99,3 +134,43 @@ list:
         material: Metal
         year: 2021
         image: /images/banthrico/mascot/wisconsin-badgers-01.jpeg
+
+      - name: Auburn University Tigers
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        issuer: Jefferson Federal Savings, Birmingham, AL
+        year: 2021
+        image: /images/banthrico/mascot/auburn-tigers-01.jpeg
+
+      - name: Univeristy of Alabama Crimson Tide
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 2021
+        issuer: Aliceville Bank & Trust Co., Alicivelle, AL
+        image: /images/banthrico/mascot/alabama-crimson-tide-01.jpeg
+
+      - name: University of Iowa Hawkeyes
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 2021
+        image: /images/banthrico/mascot/iowa-hawkeyes-01.jpeg
+
+      - name: Louisiana State University Tigers
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 2021
+        issuer: American Bank & Trust Co., Baton Rouge, LA
+        image: /images/banthrico/mascot/lsu-tigers-01.jpeg
+
+      - name: University of Georgia Bulldogs
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 2021
+        image: /images/banthrico/mascot/georgia-bulldogs-01.jpeg
+
+      - name: Georgia Tech Yellow Jackets
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 2021
+        issuer: Atlanta Federal Savings, Atlanta, GA
+        image: /images/banthrico/mascot/georgia-tech-yellow-jackets-01.jpeg
