--- a/_data/banthrico.yml
+++ b/_data/banthrico.yml
@@ -32,14 +32,14 @@ list:
       - name: Douglas MacArthur
         manufacturer: Banthrico, Chicago
         material: Metal
-        year:
+        year: 1946
         issuer: The Lee County Bank, Fort Myers, FL
         image: /images/banthrico/people/douglas-macarthur-01.jpeg
 
       - name: Native American Man
         manufacturer: Banthrico, Chicago
         material: Metal
-        year:
+        year: 1950s
         issuer: The National Shawmut Bank, Boston, MA
         image: /images/banthrico/people/native-american-man-01.jpeg
 
