added more mascots

--- a/_data/banthrico.yml
+++ b/_data/banthrico.yml
@@ -87,90 +87,158 @@ list:
 
   - category: Mascot
     items:
-      - name: University of Oregon Duck
+      - name: Oregon Duck
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: Citizen Bank of Oregon, OR
         image: /images/banthrico/mascot/oregon-duck-01.jpeg
 
-      - name: Oregon State University Beavers
+      - name: Oregon State Beaver
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: Citizen Bank of Corvallis, OR
         image: /images/banthrico/mascot/oregon-state-beavers-01.jpeg
 
-      - name: University of Michigan Wolverines
+      - name: Wyoming Cowboys
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        issuer:
+        image: /images/banthrico/mascot/wyoming-cowboys-01.jpeg
+
+      - name: Michigan Wolverine
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: Pontiac State Bank, MI
         image: /images/banthrico/mascot/michigan-wolverines-01.jpeg
 
-      - name: Michigan State University Spartan
+      - name: Michigan State Spartan
         manufacturer: Banthrico, Chicago
         material: Metal
         year: 1960s
         issuer: East Lansing State Bank, MI;  Ioter City Bank, MI
-        image: /images/banthrico/mascot/mich-state-spartans-01.jpeg
+        image: /images/banthrico/mascot/minnesota-gophers-01.jpeg
 
-      - name: University of Missouri Tigers
+      - name: Minnesota Gophers
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
+        issuer:
+        image: /images/banthrico/mascot/mich-state-spartans-01.jpeg
+
+      - name: Missouri Tiger
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
         issuer: Kansas City Bank & Trust Co., MO
         image: /images/banthrico/mascot/missouri-tigers-01.jpeg
 
-      - name: Purdue University Boilermakers
+      - name: Purdue Boilermakers
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         issuer: Lafayette National Bank, IN
         image: /images/banthrico/mascot/purdue-boilermakers-01.jpeg
 
-      - name: University of Wisconsin Badgers
+      - name: Wisconsin Badgers
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         image: /images/banthrico/mascot/wisconsin-badgers-01.jpeg
 
-      - name: Auburn University Tigers
+      - name: Auburn Tigers
         manufacturer: Banthrico, Chicago
         material: Metal
         issuer: Jefferson Federal Savings, Birmingham, AL
-        year: 2021
+        year: 1960s
         image: /images/banthrico/mascot/auburn-tigers-01.jpeg
 
-      - name: Univeristy of Alabama Crimson Tide
+      - name: Alabama Crimson Tide
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         issuer: Aliceville Bank & Trust Co., Alicivelle, AL
         image: /images/banthrico/mascot/alabama-crimson-tide-01.jpeg
 
-      - name: University of Iowa Hawkeyes
+      - name: Iowa Hawkeyes
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         image: /images/banthrico/mascot/iowa-hawkeyes-01.jpeg
+
+      - name: Iowa State Cyclones
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/iowa-state-cyclones-01.jpeg
 
       - name: Louisiana State University Tigers
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         issuer: American Bank & Trust Co., Baton Rouge, LA
         image: /images/banthrico/mascot/lsu-tigers-01.jpeg
 
-      - name: University of Georgia Bulldogs
+      - name: Georgia Bulldogs
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         image: /images/banthrico/mascot/georgia-bulldogs-01.jpeg
 
       - name: Georgia Tech Yellow Jackets
         manufacturer: Banthrico, Chicago
         material: Metal
-        year: 2021
+        year: 1960s
         issuer: Atlanta Federal Savings, Atlanta, GA
         image: /images/banthrico/mascot/georgia-tech-yellow-jackets-01.jpeg
+
+      - name: Arkansas Razorbacks
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/arkansas-razorbacks-01.jpeg
+
+      - name: Texas Longhorns
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/texas-longhorns-01.jpeg
+
+      - name: Baylor Bears
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/baylor-bears-01.jpeg
+
+      - name: Okhlahoma Sooners
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/okhlahoma-sooners-01.jpeg
+
+      - name: Okhlahoma State Pistol Pete
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/oklahoma-state-pistol-pete-01.jpeg
+
+      - name: Nebraska Cornhuskers
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/nebraska-cornhuskers-01.jpeg
+
+      - name: Airforce Academy Falcon
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/airforce-academy-falcon-01.jpeg
+
+      - name: Maine Bears
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1960s
+        image: /images/banthrico/mascot/maine-bears-01.jpeg
