--- a/_data/banthrico.yml
+++ b/_data/banthrico.yml
@@ -11,7 +11,7 @@ list:
       - name: John F. Kennedy
         manufacturer: Banthrico, Chicago
         material: Metal
-        year:
+        year: 1963
         issuer: Merchants Co-operative Bank, Boston
         image: /images/banthrico/people/john-f-kennedy-01.jpeg
 
@@ -25,7 +25,7 @@ list:
       - name: Robert E. Lee
         manufacturer: Banthrico, Chicago
         material: Metal
-        year:
+        year: 1955
         issuer: The Lee County Bank, Fort Myers, FL
         image: /images/banthrico/people/robert-e-lee-01.jpeg
 
@@ -35,27 +35,6 @@ list:
         year: 1946
         issuer: The Lee County Bank, Fort Myers, FL
         image: /images/banthrico/people/douglas-macarthur-01.jpeg
-
-      - name: Native American Man
-        manufacturer: Banthrico, Chicago
-        material: Metal
-        year: 1950s
-        issuer: The National Shawmut Bank, Boston, MA
-        image: /images/banthrico/people/native-american-man-01.jpeg
-
-      - name: Native American Chief
-        manufacturer: Banthrico, Chicago
-        material: Metal
-        year:
-        issuer: The Multnomah Bank, Portland, OR
-        image: /images/banthrico/people/native-american-chief-01.jpeg
-
-      - name: Chief Anacostia
-        manufacturer: Banthrico, Chicago
-        material: Metal
-        year:
-        issuer: Anacostia Federal Savings, Washington, DC
-        image: /images/banthrico/people/chief-anacostia-01.jpeg
 
       - name: George Washinghton (1)
         manufacturer: Banthrico, Chicago
@@ -71,19 +50,58 @@ list:
         issuer: 1 St Bank and Trust Company, Indianapolis, IN
         image: /images/banthrico/people/george-washington-01.jpeg
 
+      - name: Abraham Lincoln (1)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1940
+        issuer:
+        image: /images/banthrico/people/abraham-lincoln-1940-01.jpeg
+        note:
+          - 1940 version has Lincoln's long signature (Abraham spelled completely)
+
+      - name: Abraham Lincoln (2)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1974
+        issuer: Fidelity Savings &Loan Association, Valley City, ND
+        image: /images/banthrico/people/abraham-lincoln-1974-01.jpeg
+        note:
+          - 1974 version has Lincoln's short signature
+
       - name: Thomas A. Edison
         manufacturer: Banthrico, Chicago
         material: Metal
-        year:
+        year: 1958
         issuer: The Lee County Bank, Fort Myers, FL
         image: /images/banthrico/people/edison-01.jpeg
 
-      - name: Benjamin Franklin
+      - name: Ben Franklin (1)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1950
+        issuer: Franklin Bank, St Albans, VT
+        image: /images/banthrico/people/ben-frankin-01.jpeg
+
+      - name: Ben Franklin (2)
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1970s
+        issuer: Suffolk Franklin Savings Bank, Boston, MA
+        image: /images/banthrico/people/ben-franklin-1970-01.jpg
+
+      - name: Davy Crockett
         manufacturer: Banthrico, Chicago
         material: Metal
         year:
-        issuer: Franklin Bank, St Albans, VT
-        image: /images/banthrico/people/ben-frankin-01.jpeg
+        issuer: The Omaha National Bank, NE
+        image: /images/banthrico/people/davy-crockett-01.jpeg
+
+      - name: Charlie Russell
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1962
+        issuer: Pondera Bank of Montana, Conrad, MT
+        image: /images/banthrico/people/charlie-russell-01.jpeg
 
   - category: Mascot
     items:
@@ -262,3 +280,54 @@ list:
         material: Metal
         year: 1960s
         image: /images/banthrico/mascot/maine-bears-01.jpeg
+
+  - category: Fictional
+    items:
+      - name: Native American Man
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year: 1950s
+        issuer: The National Shawmut Bank, Boston, MA
+        image: /images/banthrico/fictional/native-american-man-01.jpeg
+
+      - name: Native American Chief
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: The Multnomah Bank, Portland, OR
+        image: /images/banthrico/fictional/native-american-chief-01.jpeg
+
+      - name: Chief Scioto
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Scioto Savings Association, Columbus, OH
+        image: /images/banthrico/fictional/chief-scioto-01.jpeg
+
+      - name: Chief Anacostia
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Anacostia Federal Savings, Washington, DC
+        image: /images/banthrico/fictional/chief-anacostia-01.jpeg
+
+      - name: Annie Costia
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Anacostia Federal Savings, Washington, DC
+        image: /images/banthrico/fictional/annie-costia-01.jpeg
+
+      - name: Andy Costia
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: Anacostia Federal Savings, Washington, DC
+        image: /images/banthrico/fictional/andy-costia-01.jpeg
+
+      - name: Dowagiac
+        manufacturer: Banthrico, Chicago
+        material: Metal
+        year:
+        issuer: First National Bank, Dowagiac, MI
+        image: /images/banthrico/fictional/dowagiac-01.jpeg
