added bankers thrift collection

--- a/_config.yml
+++ b/_config.yml
@@ -130,3 +130,7 @@ collections:
     output: true
     output_ext: .html
     permalink: /banthrico/:path/
+  banksthrift:
+    output: true
+    output_ext: .html
+    permalink: /banksthrift/:path/
