added more entries in bankers thrift collection

--- a/_data/banksthrift.yml
+++ b/_data/banksthrift.yml
@@ -18,3 +18,39 @@ list:
           - Manufactured by Grannis & Tolton, Inc., Detroit
           - Made for the Bankers Thrift Corp. of Chicago, IL
           - A bank premium given to children to teach the value in saving.
+
+      - name: Real Home Savings Bank (1)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Pressed Steel
+        year: 1920s
+        image: /images/banthrico/banksthrift/save-for-a-home-wbg-01.jpeg
+        note:
+          - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
+          - Ad from <a href="/images/banthrico/banksthrift/ad/1923-real-house-savings-bank-bankers-thrift.png" data-lightbox="1923-ad">1923</a>
+
+      - name: Real Home Savings Bank (2)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Pressed Steel
+        year: 1920s
+        issuer: First National Bank, Arcadia, FL
+        image: /images/banthrico/banksthrift/save-for-a-home-rbg-01.jpeg
+        note:
+          - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
+          - The back of the house is embossed with "First National Bank - ARCADIA, FlORIDA"
+
+      - name: Barrel Bank
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Wood, Metal
+        year: 1920s
+        image: /images/banthrico/banksthrift/barrel-wood-01.jpeg
+
+      - name: Horse Shoe Pocket Savings Bank
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Nickel Plated Steel
+        year: 1920s
+        issuer: Union National Bank, Eau Claire, WI
+        image: /images/banthrico/banksthrift/horseshoe-01.jpeg
+        note:
+          - Embossed in the back with <a href="/images/banthrico/banksthrift/horseshoe-02.jpeg" data-lightbox="luck-follows">"Luck Follows Anyone Who Saves"</a>
+          - Approximately - 3.125" L x 2.5" W
+          - Ad from <a href="/images/banthrico/banksthrift/ad/1924-bankers-thrift-horse-shoe-ad.png" data-lightbox="1924-ad">1924</a>
