added more entries in bankers thrift collection - 2

--- a/_data/banksthrift.yml
+++ b/_data/banksthrift.yml
@@ -8,16 +8,25 @@ list:
         year: 1922
         image: /images/banthrico/banksthrift/1922-teddy-roosevelt-bankers-thrift-01.jpeg
 
-      - name: Feed The Goose
+      - name: Feed The Goose (1)
         manufacturer: Bankers' Thrift Corporation, Chicago
         material: Pot Metal
         year: 1928
         image: /images/banthrico/banksthrift/feed-the-goose-black-01.jpeg
         note:
           - Designed by Douglas Hall Chicago, IL
-          - Manufactured by Grannis & Tolton, Inc., Detroit
+          - Manufactured by <a href="/images/banthrico/banksthrift/feed-the-goose-black-05.jpeg" data-lightbox="feed-goose-05">Grannis & Tolton, Inc., Detroit</a>
           - Made for the Bankers Thrift Corp. of Chicago, IL
           - A bank premium given to children to teach the value in saving.
+
+      - name: Feed The Goose (2)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Pot Metal
+        year: 1920s
+        image: /images/banthrico/banksthrift/feed-the-goose-yellow-01.jpeg
+        note:
+          - The bottom says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-04.jpeg" data-lightbox="feed-goose-03">Bankers Thrift Corp. Chicago</a>
+          - The front says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-02.jpeg" data-lightbox="feed-goose-02">"Feed the Goose and You Can Truly Have A Golden Egg"</a>
 
       - name: Real Home Savings Bank (1)
         manufacturer: Bankers' Thrift Corporation, Chicago
@@ -27,6 +36,7 @@ list:
         note:
           - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
           - Ad from <a href="/images/banthrico/banksthrift/ad/1923-real-house-savings-bank-bankers-thrift.png" data-lightbox="1923-ad">1923</a>
+
 
       - name: Real Home Savings Bank (2)
         manufacturer: Bankers' Thrift Corporation, Chicago
@@ -38,11 +48,32 @@ list:
           - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
           - The back of the house is embossed with "First National Bank - ARCADIA, FlORIDA"
 
-      - name: Barrel Bank
+      - name: Real Home Savings Bank (3)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Pressed Steel
+        year: 1920s
+        issuer: A. H Kraus Realty Co., Chicago
+        image: /images/banthrico/banksthrift/save-for-a-home-gb-02.jpeg
+        note:
+          - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
+          - The back of the house is embossed with "First National Bank - ARCADIA, FlORIDA"
+
+      - name: Barrel Bank (1)
         manufacturer: Bankers' Thrift Corporation, Chicago
         material: Wood, Metal
         year: 1920s
         image: /images/banthrico/banksthrift/barrel-wood-01.jpeg
+
+      - name: Barrel Bank (2)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Nickel Plated Brass
+        year: 1925
+        issuer: Peoples Trust & Guaranty Company, Hackensack, NJ
+        image: /images/banthrico/banksthrift/barrel-nickel-pt-01.jpg
+        note:
+          - The top is embossed with <a href="/images/banthrico/banksthrift/barrel-nickel-pt-02.jpg" data-lightbox="top">"PEOPLES TRUST & GUARANTY COMPANY OF HACKENSACK N. J. A BEACON OF PROGRESS"</a>
+          - The bottom is embossed with <a href="/images/banthrico/banksthrift/barrel-nickel-pt-03.jpg" data-lightbox="top">"SAVE YOUR COINS and have BARRELS OF MONEY, BANKERS' THRIFT CORP. CHICAGO"</a>
+          - Ad from <a href="/images/banthrico/banksthrift/ad/1928-barrel-bank-bankers-thrift.png" data-lightbox="1925-ad">1928</a>
 
       - name: Horse Shoe Pocket Savings Bank
         manufacturer: Bankers' Thrift Corporation, Chicago
@@ -54,3 +85,13 @@ list:
           - Embossed in the back with <a href="/images/banthrico/banksthrift/horseshoe-02.jpeg" data-lightbox="luck-follows">"Luck Follows Anyone Who Saves"</a>
           - Approximately - 3.125" L x 2.5" W
           - Ad from <a href="/images/banthrico/banksthrift/ad/1924-bankers-thrift-horse-shoe-ad.png" data-lightbox="1924-ad">1924</a>
+
+  - category: Miscellaneous
+    items:
+      - name: Clock
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Pressed Steel
+        year: 1930s
+        image: /images/banthrico/banksthrift/bankers-thrift-clock-01.jpeg
+        note:
+          - The bottom of the clock says <a href="/images/banthrico/banksthrift/bankers-thrift-clock-03.jpeg" data-lightbox="1924-ad">"PAT. PEND. B. T. CORP. CHGO"</a>
