stronghart initial checkin

--- a/_config.yml
+++ b/_config.yml
@@ -134,3 +134,7 @@ collections:
     output: true
     output_ext: .html
     permalink: /banksthrift/:path/
+  stronghart:
+    output: true
+    output_ext: .html
+    permalink: /stronghart/:path/
