added stronghart colection

--- a/_data/banksthrift.yml
+++ b/_data/banksthrift.yml
@@ -25,8 +25,8 @@ list:
         year: 1920s
         image: /images/banthrico/banksthrift/feed-the-goose-yellow-01.jpeg
         note:
-          - The bottom says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-04.jpeg" data-lightbox="feed-goose-03">Bankers Thrift Corp. Chicago</a>
-          - The front says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-02.jpeg" data-lightbox="feed-goose-02">"Feed the Goose and You Can Truly Have A Golden Egg"</a>
+          - The bottom says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-04.jpeg" data-lightbox="Feed-The-Goose-(2)">Bankers Thrift Corp. Chicago</a>
+          - The front says <a href="/images/banthrico/banksthrift/feed-the-goose-yellow-02.jpeg" data-lightbox="Feed-The-Goose-(2)">"Feed the Goose and You Can Truly Have A Golden Egg"</a>
 
       - name: Real Home Savings Bank (1)
         manufacturer: Bankers' Thrift Corporation, Chicago
@@ -36,7 +36,6 @@ list:
         note:
           - The front of the house is embossed with "SAVE FOR A HOME - Bankers Thrift Corp., Chicago"
           - Ad from <a href="/images/banthrico/banksthrift/ad/1923-real-house-savings-bank-bankers-thrift.png" data-lightbox="1923-ad">1923</a>
-
 
       - name: Real Home Savings Bank (2)
         manufacturer: Bankers' Thrift Corporation, Chicago
