--- a/_data/banksthrift.yml
+++ b/_data/banksthrift.yml
@@ -94,3 +94,55 @@ list:
         image: /images/banthrico/banksthrift/bankers-thrift-clock-01.jpeg
         note:
           - The bottom of the clock says <a href="/images/banthrico/banksthrift/bankers-thrift-clock-03.jpeg" data-lightbox="1924-ad">"PAT. PEND. B. T. CORP. CHGO"</a>
+
+      - name: Edison Bust (1)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Plaster
+        image: /images/banthrico/banksthrift/bank-thrift-edison-gold-bust-01.jpeg
+        note:
+          - <a href="/images/banthrico/banksthrift/bank-thrift-edison-gold-bust-02.jpeg" data-lightbox="Edision-Bust(1)">Right progile</a>
+          - Life size bust of Thomas Alva Edison made of plaster. It's 17" tall and weighs 10 pounds.
+
+      - name: Edison Bust (2)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Plaster
+        image: /images/banthrico/banksthrift/bank-thrift-edison-white-bust-01.jpeg
+        note:
+          - Life size bust of Thomas Alva Edison made of plaster. It's 17" tall, 8 1/2" deep, and weighs 11 pounds.
+
+      - name: Edison Bust (3)
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Plaster
+        image: /images/banthrico/banksthrift/bank-thrift-edison-bronze-bust-01.jpeg
+        note:
+          - The front of the bust says T. A. Edison
+          - Life size bust of Thomas Alva Edison made of plaster. It's 17" tall, 8 1/2" deep, 10 1/2" wide, and weighs 13.65 pounds.
+          - <a href="/images/banthrico/banksthrift/bank-thrift-edison-bronze-bust-02.jpeg" data-lightbox="Edision-Bust(3)">Right profile</a>
+          - <a href="/images/banthrico/banksthrift/bank-thrift-edison-bronze-bust-03.jpeg" data-lightbox="Edision-Bust(3)">Left profile</a>
+          - On the back is engraved <a href="/images/banthrico/banksthrift/bank-thrift-edison-bronze-bust-04.jpeg" data-lightbox="Edision-Bust(3)">R"Banker's Thrift Corp. Chicago"</a>
+
+      - name: Christopher Columbus
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Plaster
+        year: 1930s
+        image: /images/banthrico/banksthrift/bank-thrift-columbus-bust-01.jpeg
+        note:
+          - The front of the bust says Columbus
+          - Life size bust of Christopher Columbus made of plaster. It's 18 1/4" tall, 11" deep, and 12" wide.
+          - Most probably used in class room settings. measures about 12" wide, 18 1/4" high, and 11" deep.
+          - <a href="/images/banthrico/banksthrift/bank-thrift-columbus-bust-03.jpeg" data-lightbox="Christopher-Columbus">Right profile</a>
+          - <a href="/images/banthrico/banksthrift/bank-thrift-columbus-bust-02.jpeg" data-lightbox="Christopher-Columbus">Left profile</a>
+          - On the back is engraved <a href="/images/banthrico/banksthrift/bank-thrift-columbus-bust-04.jpeg" data-lightbox="Christopher-Columbus">"Banker's Thrift Corp. Chicago"</a>
+
+  - category: Catalog
+    items:
+      - name: 1928 Catalog
+        manufacturer: Bankers' Thrift Corporation, Chicago
+        material: Paper
+        year: 1928
+        image: /images/banthrico/banksthrift/ad/1928-bankers-thrift-catalog-01.jpeg
+        note:
+          - Description about <a href="/images/banthrico/banksthrift/ad/1928-bankers-thrift-catalog-02.jpeg" data-lightbox="1928-Catalog">Goldeb Egg Bank Display Cabinet</a>
+          - Description about <a href="/images/banthrico/banksthrift/ad/1928-bankers-thrift-catalog-03.jpeg" data-lightbox="1928-Catalog">The "Real Home" Bank</a>
+          - Description about <a href="/images/banthrico/banksthrift/ad/1928-bankers-thrift-catalog-04.jpeg" data-lightbox="1928-Catalog">The Fortune Teller Barrel Bank</a>
+
