--- a/_data/banksthrift.yml
+++ b/_data/banksthrift.yml
@@ -81,7 +81,7 @@ list:
 
   - category: Miscellaneous
     items:
-      - name: Theodore Roosevelt (1)
+      - name: Theodore Roosevelt
         manufacturer: Bankers' Thrift Corporation, Chicago
         material: White Metal
         year: 1922
@@ -89,15 +89,8 @@ list:
         note:
           - Teddy Roosevelt bust is about 8.75" tall and base is 6.50" x 3.50". It weighs about 7 lbs.
           - Designed by Louis Vincent Aronson
-
-      - name: Theodore Roosevelt (2)
-        manufacturer: Bankers' Thrift Corporation, Chicago
-        material: White Metal
-        year: 1922
-        image: /images/banthrico/banksthrift/1922-teddy-roosevelt-bankers-thrift-02.jpeg
-        note:
-          - Teddy Roosevelt bust is about 8.75" tall and base is 6.50" x 3.50". It weighs about 7 lbs.
-          - Designed by Louis Vincent Aronson
+          - <a href="/images/banthrico/banksthrift/1922-teddy-roosevelt-bankers-thrift-02.jpeg" data-lightbox="Theodore-Roosevelt(2)">Another front view</a>
+          - <a href="/images/banthrico/banksthrift/1922-teddy-roosevelt-bankers-thrift-03.jpeg" data-lightbox="Theodore-Roosevelt(2)">Left profile</a>
 
       - name: Clock
         manufacturer: Bankers' Thrift Corporation, Chicago
