--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: One Brick at a Time...
 
 # Short bio or description (displayed in the header)
-description: 
+description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://indrabasak.github.io/images/brick.png
@@ -138,3 +138,7 @@ collections:
     output: true
     output_ext: .html
     permalink: /stronghart/:path/
+  lincolnlogs:
+    output: true
+    output_ext: .html
+    permalink: /lincolnlogs/:path/
