initial revision of Lego cross story

--- a/_config.yml
+++ b/_config.yml
@@ -138,6 +138,10 @@ collections:
     output: true
     output_ext: .html
     permalink: /stronghart/:path/
+  lego:
+    output: true
+    output_ext: .html
+    permalink: /lego/:path/
   lincolnlogs:
     output: true
     output_ext: .html
