start of other building toys

--- a/_config.yml
+++ b/_config.yml
@@ -146,3 +146,7 @@ collections:
     output: true
     output_ext: .html
     permalink: /lincolnlogs/:path/
+  buildingtoys:
+    output: true
+    output_ext: .html
+    permalink: /buildingtoys/:path/
